--- a/index.html
+++ b/index.html
@@ -8,13 +8,19 @@ layout: default
             <h1>CODE DANGEROUSLY</h1>
             <ul class="social-list">
                 <li>
-                    <a href="http://example.com/" class="social-link">Fb</a>
+                    <a href="http://example.com/" class="social-link">
+                        <i class="fab fa-facebook-f"></i>
+                    </a>
                 </li>
                 <li>
-                    <a href="http://example.com/" class="social-link">Tw</a>
+                    <a href="http://example.com/" class="social-link">
+                        <i class="fab fa-twitter"></i>
+                    </a>
                 </li>
                 <li>
-                    <a href="http://example.com/" class="social-link">Gh</a>
+                    <a href="http://example.com/" class="social-link">
+                        <i class="fab fa-github-alt"></i>
+                    </a>
                 </li>
             </ul>
         </div>
@@ -65,7 +71,7 @@ layout: default
                 <img src="http://placekitten.com/g/350/350">
                 <h3>Michael Hartl</h3>
                 <a href="http://twitter.com/mhartl" class="social-link">
-                    Tw
+                    <i class="fab fa-twitter"></i>
                 </a>
                 <div class="bio-copy">
                     <p>
@@ -89,7 +95,7 @@ layout: default
                 <img src="http://placekitten.com/g/350/350">
                 <h3>Lee Donahoe</h3>
                 <a href="https://twitter.com/leedonahoe" class="social-link">
-                    Tw
+                    <i class="fab fa-twitter"></i>
                 </a>
                 <div class="bio-copy">
                     <p>
@@ -104,7 +110,7 @@ layout: default
                 <img src="http://placekitten.com/g/350/350">
                 <h3>Nick Merwin</h3>
                 <a href="https://twitter.com/nickmerwin" class="social-link">
-                    Tw
+                    <i class="fab fa-twitter"></i>
                 </a>
                 <div class="bio-copy">
                     <p>
